Moved search field to navbar. Fixed large gap at the top of pages. Categories are now compulsory when adding a project. Made delete comment button on project show page more visible. Changed Admin to Admin area.

--- a/app/assets/stylesheets/add_project.css.sass
+++ b/app/assets/stylesheets/add_project.css.sass
@@ -15,6 +15,9 @@
   font-weight: bold
   font-style: italic
 
+.top
+  margin-top: -75px
+
 categories_title
   float: right
   clear: right
