--- a/app/assets/stylesheets/rre.css.sass
+++ b/app/assets/stylesheets/rre.css.sass
@@ -30,6 +30,9 @@
 .categories_box p
   background-color: #3399ff
 
+.top
+  margin-top: -75px
+
 .page-header h1
   text-align: center
   font-weight: bold
